# AI-Horizon

./: .gitignore  README.md  _AI_Horizon_Forecasting_Complete (1).docx  ai-horizon-portal.html  ai-horizon-resources.csv  aihorizon-chatmem.html  dcwf_pdfs_gemini25.lnk  dcwf_to_gemini.py  desktop.ini  🚀 AI Horizon DCWF Classification - COMPLETE PIPELINE v2 copy.json
.claude/: settings.local.json
ai-horizon-frontend/: lint_output.txt  package-lock.json  package.json
ai-horizon-frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ai-horizon-frontend/app/chat/: page.tsx
ai-horizon-frontend/app/resources/: page.tsx
ai-horizon-frontend/app/skills/: page.tsx
ai-horizon-frontend/app/submit/: page.tsx
ai-horizon-frontend/components/badges/: ClassificationBadge.tsx  ResourceTypeBadge.tsx  StatusBadges.tsx
ai-horizon-frontend/components/cards/: ResourceCard.tsx  (+1 more)
ai-horizon-frontend/lib/: api.ts  supabase.ts  types.ts
ai-horizon-python/ai-horizon-python/: .env.example  .gitignore  AUDIT_AND_ROADMAP.md  CLAUDE_CODE_CONTEXT.md  DEPLOYMENT.md  RAILWAY_DEPLOY.md  README.md  evidence_store.json  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  supabase_rls_policies.sql
ai-horizon-python/ai-horizon-python/scripts/: reorganize_stores.py  setup_file_stores.py
ai-horizon-python/ai-horizon-python/src/: config.py  main.py
ai-horizon-python/ai-horizon-python/src/agents/: chat_agent.py
ai-horizon-python/ai-horizon-python/src/api/: db.py  main.py  supabase_client.py
ai-horizon-python/ai-horizon-python/src/classification/: classifier.py  models.py  prompts.py
ai-horizon-python/ai-horizon-python/src/extraction/: router.py
ai-horizon-python/ai-horizon-python/src/static/: index.html
ai-horizon-python/ai-horizon-python/src/storage/: file_search.py
(+5 files in other folders)
